# portfolio-management

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
backtest_app/: app.py  requirements.txt  run.sh
backtest_app/experiments/indicators/: README.md  adx_ema.py  adx_ema_rsi.py  adx_sma_cci.py  bollinger.py  bollinger_supertrend.py  cci.py  cmf.py  obv.py  rsi.py  rsi_sma_adx.py  rsi_v_recovery.py  supertrend.py  volume_climax.py
backtest_app/experiments/strategies/: adx_ema.py  (+5 more)
backtest_app/pages/: indicators.py  strategies.py
backtest_app/utils/: backtest.py  data_loader.py  indicators.py  master_q4_loader.py
backtest_app/views/: indicators.py  strategies.py
dash-example/: stock-chart.py
data/: ArtemisGlobalIncome.csv  BGAmerican.csv  BGGlobalAlpha.csv  BGPositiveChange.csv  CTY.L.csv  DGI9.L.csv  FidelityGlobalDividend.csv  JGGI.L.csv  LFLindsellTrainUKEquity.csv  MYI.L.csv  RICA.L.csv
data/lorentzian/: NSE_NIFTY_DAILY_result.csv
data/portfolio/: 0P00000EO1.L.csv  0P0001824G.L.csv  BHMG.L.csv  EWI.L.csv  FGT.L.csv  GRID.L.csv  KPC.L.csv  MNKS.L.csv  SAIN.L.csv  SMT.L.csv  TMFulcrumDiversifiedCore.csv  VTArgonautAbsoluteReturn.csv
docs/: live_trader_design.md
live_trader/: api.py  app.py  config.json  config.py  cron.sh  ping.py  run.py  run.sh  run_api.sh  run_ui.sh  state.py  test_app.py  trader.py
live_trader/state/: error_log.csv  event_log.csv  portfolio.json  settings.json  trade_log.csv
live_trader/strategies/: loader.py
notebooks/: IndicatorStrategies.ipynb  Indicators.ipynb  Kraken API.ipynb  Lorentzian classification v2.ipynb  Lorentzian classification.ipynb  LorentzianStrategy.ipynb  MyStrategy.ipynb  Price History.ipynb  SimpleReversalStrategy.ipynb  Stock chart.ipynb  WtCciStAdxStrategy.ipynb  lorentzian.csv  performance_tests.csv
robo-trader/: README.md  poetry.toml  pyproject.toml
robo-trader/robo_trader/: __init__.py  broker.py  exchange.py  feed.py  main.py  portfolio.py  portfolio_manager.py  price_provider.py  robo_trader.py  signal_generator.py  strategy.py  trader.py  types.py
robo-trader/robo_trader/brokers/: __init__.py  backtest_broker.py  ccxt_broker.py
robo-trader/robo_trader/feeds/: __init__.py  cctx_feed.py  kraken_csv_feed.py  yfinance.py  yfinance_feed.py
robo-trader/robo_trader/indicators/: __init__.py  adx.py  bollinger.py  cci.py  cmf.py  macd.py  mfi.py  obv.py  rsi.py  supertrend.py  volume_climax.py  vwap.py
robo-trader/robo_trader/price_providers/: __init__.py  yfinance.py
robo-trader/robo_trader/strategies/: __init__.py  adx_ema.py  adx_ema_rsi.py  adx_sma_cci.py  lorentzian_strategy.py  simple_reversal.py  simple_reversal_strategy.py  sma_buy_dip.py  volume_climax.py  wt_cci_st_adx_strategy.py
robo-trader/tests/: test_dummy_price_provider.py  test_dummy_signal_generator.py  test_portfolio.py  test_portfolio_manager.py  test_robo_trader.py
robo-trader/tests/price_providers/: test_yfinance.py
robo-trader/tests/strategies/: test_lorentzian_strategy.py
