[tool.poetry]
name = "portfolio-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
notebook = "^6.4.12"
pandas = "^2.2.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
ipywidgets = "^8.1.3"
ipympl = "^0.9.4"
advanced-ta = {path = "./advanced-ta"}
yfinance = "^0.2.40"
requests = "^2.32.3"
plotly = "^5.22.0"
dash = "^2.17.0"
robo-trader = {path = "./robo-trader"}
ta = "^0.11.0"
pandas-ta = "^0.3.14b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
