[tool.poetry]
name = "portfolio-management"
version = "0.1.0"
description = ""
authors = ["Argiris Grivas <argiris.grivas@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
notebook = "^6.4.12"
pandas = "^2.2.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
ipywidgets = "^8.1.3"
ipympl = "^0.9.4"
advanced-ta = {path = "./advanced-ta", develop = true}
yfinance = "^0.2.40"
requests = "^2.32.3"
robo-trader = {path = "./robo-trader", develop = true}
ta = "^0.11.0"
pandas-ta = "^0.4.71b0"
streamlit = "^1.28.0"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
numpy = "^2.2.6"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "streamlit (>=1.56.0,<2.0.0)"
]
