[tool.poetry]
name = "robo-trader"
version = "0.3.6"
description = ""
authors = ["Argiris Grivas <argiris.grivas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
yfinance = "^0.2.40"
advanced-ta = {path = "../advanced-ta"}
ta = "^0.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
